--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,22 @@
   "bugs": {
     "url": "https://github.com/git-sedetce/gestao_vista/issues"
   },
-  "homepage": "https://github.com/git-sedetce/gestao_vista#readme"
+  "homepage": "https://github.com/git-sedetce/gestao_vista#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
+    "path": "^0.12.7",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "server": "^1.0.39"
+  }
 }
