--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Sistemas de exibição de atividades da SDE.",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,6 +36,6 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
-    "server": "^1.0.39"
+    "server": "file:"
   }
 }
