--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.4",
     "client": "file:",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
