--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
