--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.4",
     "client": "file:",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
